tests/fixtures/invalid/bytes_lshift_bytes.py
# Test bytes left shift (unsupported operator)
x: bytes = b"hello"
y: bytes = b"world"
result: bytes = x << y
